# guanzai

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIOR_ART.md  README.es.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PRIVACY.md
docs/superpowers/plans/: 2026-07-11-guanzai-v0.1.md  2026-07-11-guanzai-v0.2.md  2026-07-11-public-alpha-release.md  2026-07-12-cost-aware-positioning.md  2026-07-17-routing-and-runtime-discipline.md
docs/superpowers/specs/: 2026-07-11-public-alpha-release-design.md  2026-07-12-cost-aware-positioning-design.md  2026-07-15-guanzai-ai-project-caregiver-design.md
research/: superpowers-v6.1.1-comparison.md
skill-evals/: baseline.md  workbuddy-hy3-v0.2.md
skill/guanzai/: SKILL.md
skill/guanzai/agents/: openai.yaml
skill/guanzai/references/: routing-policy.md
src/guanzai/: __init__.py  adapters.py  cli.py  config.py  gate.py  models.py  packets.py  router.py
tests/: test_cli.py  test_doctor.py  test_gate.py  test_modes.py  test_packets.py  test_router.py
